--- a/views/discuss.pug
+++ b/views/discuss.pug
@@ -20,7 +20,7 @@ head
 // Navbars
 // Navbar 1
 nav#navbar1.navbar.py-0.navbar-expand-lg.navbar-light.navbar-custom.navbar-inverse.navbar-fixed-top
-  a.navbar-brand(href='#')
+  a.navbar-brand(href='/')
     img#india_flag(alt='Government of India' src='images/india_flag.png')
     |           GOVERNMENT OF INDIA
   button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarNav' aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation')
@@ -28,31 +28,31 @@ nav#navbar1.navbar.py-0.navbar-expand-lg.navbar-light.navbar-custom.navbar-inver
   #navbarNav.collapse.navbar-collapse
     ul.navbar-nav.ms-auto
       li.nav-item.active
-        a.nav-link(href='#') Skip to main content
+        a.nav-link(href='/') Skip to main content
       li.nav-item
-        a.nav-link(href='#') &#x939;&#x93F;&#x928;&#x94D;&#x926;&#x940;
+        a.nav-link(href='/') &#x939;&#x93F;&#x928;&#x94D;&#x926;&#x940;
       li.nav-item
-        a.nav-link(href='#')
+        a.nav-link(href='/')
           i.fas.fa-wheelchair
       li.nav-item
-        a.nav-link(href='#')
+        a.nav-link(href='/')
           i.fab.fa-twitter
       li.nav-item
-        a.nav-link(href='#')
+        a.nav-link(href='/')
           i.fab.fa-facebook
       li.nav-item
-        a.nav-link(href='#')
+        a.nav-link(href='/')
           i.fab.fa-youtube
       li.nav-item
-        a.nav-link(href='#')
+        a.nav-link(href='/')
           i.fab.fa-instagram
       li.nav-item
-        a.nav-link.login(href='login.html') Login
+        a.nav-link.login(href='/login') Login
       li.nav-item
-        a.nav-link.register(href='#') Register
+        a.nav-link.register(href='/register') Register
 // Navbar 2
 nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-inverse.navbar-fixed-top
-  a.navbar-brand(href='#')
+  a.navbar-brand(href='/')
     img#mygov_logo(alt='mygov logo' src='images/mygov_logo.png')
     img#azadi_logo(alt='Azadi ka amrit mahotsav' src='images/azadi_img.png')
   button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarNav' aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation')
@@ -60,38 +60,38 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
   #navbarNav.collapse.navbar-collapse
     ul.navbar-nav.ms-auto
       li.nav-item.active
-        a.nav-link.nav-link2(href='#') Home
+        a.nav-link.nav-link2(href='/') Home
       li.nav-item
-        a.nav-link(href='#') About
+        a.nav-link(href='/') About
       // Dropdown
       li.nav-item.dropdown
-        a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false')
+        a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='/' role='button' data-bs-toggle='dropdown' aria-expanded='false')
           | Activites
         ul.dropdown-menu(aria-labelledby='navbarDropdownMenuLink')
           li
-            a.dropdown-item(href='groups.html') Groups
+            a.dropdown-item(href='/groups') Groups
           li
-            a.dropdown-item(href='do/do.html') Do
+            a.dropdown-item(href='/do') Do
           li
-            a.dropdown-item(href='discuss.html') Discuss
+            a.dropdown-item(href='/discuss') Discuss
           li
-            a.dropdown-item(href='#') Poll &amp; Survey
+            a.dropdown-item(href='/poll') Poll &amp; Survey
           li
-            a.dropdown-item(href='blog.html') Blog
+            a.dropdown-item(href='/blog') Blog
           li
-            a.dropdown-item(href='talk/Talk.html') Talk
+            a.dropdown-item(href='/Talk') Talk
           li
-            a.dropdown-item(href='campaigns.html') Campaigns
+            a.dropdown-item(href='/campaigns') Campaigns
           li
-            a.dropdown-item(href='#') Podcast
+            a.dropdown-item(href='/podcast') Podcast
           li
-            a.dropdown-item(href='#') Wall of Fame
+            a.dropdown-item(href='/') Wall of Fame
       li.nav-item
-        a.nav-link(href='#') Contact
+        a.nav-link(href='/') Contact
       li.nav-item
-        a.nav-link(href='#') basic
+        a.nav-link(href='/') basic
       li.nav-item
-        a.nav-link(href='#') lmao
+        a.nav-link(href='/') lmao
 // content section
 .container
   div
@@ -103,7 +103,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
         img.card-img-top(src='images/ek bharat.jpg' alt='Department of posts')
         .col.frst-bar
           span Status:
-          a.btn.btn-success(href='#') OPEN
+          a.btn.btn-success(href='/') OPEN
           a.fa-brands.fa-facebook
           a.fa-brands.fa-twitter
         .card-body
@@ -117,7 +117,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
         img.card-img-top(src='images/azadi_img.png' alt='Department of posts')
         .col.frst-bar
           span Status:
-          a.btn.btn-success(href='#') OPEN
+          a.btn.btn-success(href='/') OPEN
           a.fa-brands.fa-facebook
           a.fa-brands.fa-twitter
         .card-body
@@ -131,7 +131,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
         img.card-img-top(src='images/ek bharat.jpg' alt='Department of posts')
         .col.frst-bar
           span Status:
-          a.btn.btn-success(href='#') OPEN
+          a.btn.btn-success(href='/') OPEN
           a.fa-brands.fa-facebook
           a.fa-brands.fa-twitter
         .card-body
@@ -145,7 +145,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
         img.card-img-top(src='images/ek bharat.jpg' alt='Department of posts')
         .col.frst-bar
           span Status:
-          a.btn.btn-success(href='#') OPEN
+          a.btn.btn-success(href='/') OPEN
           a.fa-brands.fa-facebook
           a.fa-brands.fa-twitter
         .card-body
@@ -159,7 +159,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
         img.card-img-top(src='images/ek bharat.jpg' alt='Department of posts')
         .col.frst-bar
           span Status:
-          a.btn.btn-success(href='#') OPEN
+          a.btn.btn-success(href='/') OPEN
           a.fa-brands.fa-facebook
           a.fa-brands.fa-twitter
         .card-body
@@ -173,7 +173,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
         img.card-img-top(src='images/science&technology.png' alt='Department of posts')
         .col.frst-bar
           span Status:
-          a.btn.btn-success(href='#') OPEN
+          a.btn.btn-success(href='/') OPEN
           a.fa-brands.fa-facebook
           a.fa-brands.fa-twitter
         .card-body
@@ -187,7 +187,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
         img.card-img-top(src='images/ek bharat.jpg' alt='Department of posts')
         .col.frst-bar
           span Status:
-          a.btn.btn-success(href='#') OPEN
+          a.btn.btn-success(href='/') OPEN
           a.fa-brands.fa-facebook
           a.fa-brands.fa-twitter
         .card-body
@@ -201,7 +201,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
         img.card-img-top(src='images/azadi_img.png' alt='Department of posts')
         .col.frst-bar
           span Status:
-          a.btn.btn-success(href='#') OPEN
+          a.btn.btn-success(href='/') OPEN
           a.fa-brands.fa-facebook
           a.fa-brands.fa-twitter
         .card-body
@@ -215,7 +215,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-invers
         img.card-img-top(src='images/Civil-Aviation.png' alt='Department of posts')
         .col.frst-bar
           span Status:
-          a.btn.btn-success(href='#') OPEN
+          a.btn.btn-success(href='/') OPEN
           a.fa-brands.fa-facebook
           a.fa-brands.fa-twitter
         .card-body
@@ -233,47 +233,47 @@ footer.bg-primary.text-white.pt-5.pb-4
         p
           a.text-white(href='groups.html' style='text-decoration: none;')  Groups
         p
-          a.text-white(href='#' style='text-decoration: none;')  Do
+          a.text-white(href='/do' style='text-decoration: none;')  Do
         p
-          a.text-white(href='#' style='text-decoration: none;')  Discuss
+          a.text-white(href='/discuss' style='text-decoration: none;')  Discuss
         p
-          a.text-white(href='#' style='text-decoration: none;')  Poll &amp; Survey
+          a.text-white(href='/poll' style='text-decoration: none;')  Poll &amp; Survey
         p
-          a.text-white(href='#' style='text-decoration: none;')  Blog
+          a.text-white(href='/blog' style='text-decoration: none;')  Blog
         p
-          a.text-white(href='#' style='text-decoration: none;')  Talk
+          a.text-white(href='/talk' style='text-decoration: none;')  Talk
         p
-          a.text-white(href='#' style='text-decoration: none;')  Campaigns
+          a.text-white(href='/campaigns' style='text-decoration: none;')  Campaigns
         p
-          a.text-white(href='#' style='text-decoration: none;')  Podcast
+          a.text-white(href='/podcast' style='text-decoration: none;')  Podcast
       .col-md-2.col-lg-2.col-xl-2.mx-auto.mt-3
         h5.text-uppercase.mb-4.font-weight-bold.text-white Get To Know
         p
-          a.text-white(href='#' style='text-decoration: none;')  About MyGov
+          a.text-white(href='/' style='text-decoration: none;')  About MyGov
         p
-          a.text-white(href='#' style='text-decoration: none;')  Associate with MyGov
+          a.text-white(href='/' style='text-decoration: none;')  Associate with MyGov
         p
-          a.text-white(href='#' style='text-decoration: none;')  MyGov in Media
+          a.text-white(href='/' style='text-decoration: none;')  MyGov in Media
         p
-          a.text-white(href='#' style='text-decoration: none;')  Website Policies
+          a.text-white(href='/' style='text-decoration: none;')  Website Policies
         p
-          a.text-white(href='#' style='text-decoration: none;')  Link to us
+          a.text-white(href='/' style='text-decoration: none;')  Link to us
         p
-          a.text-white(href='#' style='text-decoration: none;')  Work at MyGov
+          a.text-white(href='/' style='text-decoration: none;')  Work at MyGov
         p
-          a.text-white(href='#' style='text-decoration: none;')  Points &amp; Badges
+          a.text-white(href='/' style='text-decoration: none;')  Points &amp; Badges
         p
-          a.text-white(href='#' style='text-decoration: none;')  FAQ
+          a.text-white(href='/' style='text-decoration: none;')  FAQ
       .col-md-3.col-lg-2.col-xl-2.mx-auto.mt-3
         h5.text-uppercase.mb-4.font-weight-bold.text-white Help &amp; Support
         p
-          a.text-white(href='#' style='text-decoration: none;')  Help
+          a.text-white(href='/' style='text-decoration: none;')  Help
         p
-          a.text-white(href='#' style='text-decoration: none;')  Feedback
+          a.text-white(href='/' style='text-decoration: none;')  Feedback
         p
-          a.text-white(href='#' style='text-decoration: none;')  Terms &amp; Conditions
+          a.text-white(href='/' style='text-decoration: none;')  Terms &amp; Conditions
         p
-          a.text-white(href='#' style='text-decoration: none;')  Contact
+          a.text-white(href='/' style='text-decoration: none;')  Contact
       .col-md-4.col-lg-3.col-xl-3.mx-auto.mt-3
         h5.text-uppercase.mb-4.font-weight-bold.text-white Contact
         p
@@ -293,25 +293,25 @@ footer.bg-primary.text-white.pt-5.pb-4
       .col-md-7.col-lg-8
         p
           | Copyright &copy;2020 All rights reserved by:
-          a(href='#' style='text-decoration: none;')
+          a(href='/' style='text-decoration: none;')
             strong.text-white MyGov
       .col-md-5.col-lg-4
         .text-center.text-md-right
           ul.list-unstyled.list-inline
             li.list-inline-item
-              a.btn-floating.btn-sm.text-white(href='#' style='font-size: 23px;')
+              a.btn-floating.btn-sm.text-white(href='/' style='font-size: 23px;')
                 i.fab.fa-facebook
             li.list-inline-item
-              a.btn-floating.btn-sm.text-white(href='#' style='font-size: 23px;')
+              a.btn-floating.btn-sm.text-white(href='/' style='font-size: 23px;')
                 i.fab.fa-twitter
             li.list-inline-item
-              a.btn-floating.btn-sm.text-white(href='#' style='font-size: 23px;')
+              a.btn-floating.btn-sm.text-white(href='/' style='font-size: 23px;')
                 i.fab.fa-google-plus
             li.list-inline-item
-              a.btn-floating.btn-sm.text-white(href='#' style='font-size: 23px;')
+              a.btn-floating.btn-sm.text-white(href='/' style='font-size: 23px;')
                 i.fab.fa-linkedin-in
             li.list-inline-item
-              a.btn-floating.btn-sm.text-white(href='#' style='font-size: 23px;')
+              a.btn-floating.btn-sm.text-white(href='/' style='font-size: 23px;')
                 i.fab.fa-youtube
 // JavaScript tags
 script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js' integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN' crossorigin='anonymous')
