--- a/views/login.pug
+++ b/views/login.pug
@@ -28,7 +28,7 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-custom.navbar-inverse.navbar-static-t
       .card-body
         h3.card-title.text-center Log in to your Account
         .card-text
-          form(action='/login' method='post')
+          form
             .form-group
               label(for='exampleInputEmail1')  E-mail/Mobile
               input#exampleInputEmail1.form-control.form-control-sm(type='email' aria-describedby='emailHelp')
@@ -38,15 +38,15 @@ nav#navbar2.navbar.navbar-expand-lg.navbar-custom.navbar-inverse.navbar-static-t
             br
             .form-group
               label(for='exampleInputEmail1')  E-mail/Mobile
-              input#exampleInputEmail1.form-control.form-control-sm(type='email' name="email" aria-describedby='emailHelp')
+              input#exampleInputEmail1.form-control.form-control-sm(type='email' aria-describedby='emailHelp')
             .form-group
               label(for='exampleInputPassword1')  Password 
-              input#exampleInputPassword1.form-control.form-control-sm(type='password' name="password")
+              input#exampleInputPassword1.form-control.form-control-sm(type='password')
             a(href='#' style='float:right;font-size:12px;')  Forgot your password? 
             button.btn.btn-block(type='submit')  Log in with Password 
             .sign-up
               | Not registered before?
-              a(href='#')  Register Now 
+              a(href='/register')  Register Now 
 script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js' integrity='sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p' crossorigin='anonymous')
 script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js' integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN' crossorigin='anonymous')
 script(src='https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js' integrity='sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB' crossorigin='anonymous')
