--- a/views/blog.pug
+++ b/views/blog.pug
@@ -49,7 +49,7 @@ nav#navbar1.navbar.py-0.navbar-expand-lg.navbar-light.navbar-custom.navbar-inver
       li.nav-item
         a.nav-link.login(title='link' href='/login') Login
       li.nav-item
-        a.nav-link.register(title='link' href='/register') Register
+        a.nav-link.register(title='link' href='/myGovRegister') Register
 // Navbar 2
 nav#navbar2.navbar.navbar-expand-lg.navbar-light.navbar-two-custom.navbar-inverse.navbar-fixed-top
   a.navbar-brand(title='link' href='/')
